@@ -282,11 +282,11 @@ dc1394_capture_setup(dc1394camera_t *camera, uint32_t num_dma_buffers, uint32_t 
   craw->capture.flags=flags;
 
   // allocate channel/bandwidth if requested
-  if ((flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) >0) {
+  if (flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) {
     err=dc1394_allocate_iso_channel(camera);
     DC1394_ERR_RTN(err,"Could not allocate ISO channel!");
   }
-  if ((flags & DC1394_CAPTURE_FLAGS_BANDWIDTH_ALLOC) >0) {
+  if (flags & DC1394_CAPTURE_FLAGS_BANDWIDTH_ALLOC) {
     err=dc1394_allocate_bandwidth(camera);
     DC1394_ERR_RTN(err,"Could not allocate bandwidth!");
   }
@@ -294,41 +294,30 @@ dc1394_capture_setup(dc1394camera_t *camera, uint32_t num_dma_buffers, uint32_t 
   craw->capture.frames = malloc (num_dma_buffers * sizeof (dc1394video_frame_t));
 
   err=_dc1394_capture_basic_setup(camera, craw->capture.frames);
-  if (err != DC1394_SUCCESS) {
-    // free ressources if they were allocated
-    if ((flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) >0) {
-      err=dc1394_free_iso_channel(camera);
-      DC1394_ERR_RTN(err,"Could not free ISO channel!");
-    }
-    if ((flags & DC1394_CAPTURE_FLAGS_BANDWIDTH_ALLOC) >0) {
-      err=dc1394_free_bandwidth(camera);
-      DC1394_ERR_RTN(err,"Could not free bandwidth!");
-    }
-
-    free (craw->capture.frames);
-    craw->capture.frames = NULL;
-  }
-  DC1394_ERR_RTN(err,"Could not setup capture");
+  if (err != DC1394_SUCCESS)
+    goto fail;
   
   // the capture_is_set flag is set inside this function:
   err=_dc1394_capture_dma_setup (camera, num_dma_buffers);
-  if (err != DC1394_SUCCESS) {
-    // free ressources if they were allocated
-    if ((flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) >0) {
-      err=dc1394_free_iso_channel(camera);
-      DC1394_ERR_RTN(err,"Could not free ISO channel!");
-    }
-    if ((flags & DC1394_CAPTURE_FLAGS_BANDWIDTH_ALLOC) >0) {
-      err=dc1394_free_bandwidth(camera);
-      DC1394_ERR_RTN(err,"Could not free bandwidth!");
-    }
+  if (err != DC1394_SUCCESS)
+    goto fail;
 
-    free (craw->capture.frames);
-    craw->capture.frames = NULL;
+  return DC1394_SUCCESS;
+
+fail:
+  // free resources if they were allocated
+  if (flags & DC1394_CAPTURE_FLAGS_CHANNEL_ALLOC) {
+    if (dc1394_free_iso_channel(camera) != DC1394_SUCCESS)
+      fprintf (stderr, "Could not free ISO channel!\n");
   }
-  DC1394_ERR_RTN(err,"Could not setup DMA capture");
+  if (flags & DC1394_CAPTURE_FLAGS_BANDWIDTH_ALLOC) {
+    if (dc1394_free_bandwidth(camera) != DC1394_SUCCESS)
+      fprintf (stderr, "Could not free bandwidth!\n");
+  }
 
-  return err;
+  free (craw->capture.frames);
+  craw->capture.frames = NULL;
+  DC1394_ERR_RTN(err,"Could not setup DMA capture");
 }
 
 /*****************************************************
